# tas

./: .gitignore  README.md
cpp/: Makefile.am  README  configure.ac  global.h
cpp/client/src/: Makefile.am  curlssl.cpp
cpp/dsalgo/src/: Makefile.am  algo.cpp  parser.cpp  prepareindex.cpp  searchterm.cpp
cpp/server/inc/: connection.hpp
cpp/server/src/: Makefile  Makefile.am  main.cpp  request_handler.cpp
cpp/server/src/docroot/: index.html  index_1.html  search.html
