AC_PREREQ(2.69)
AC_INIT([prj],0.1.0)
AC_CONFIG_SRCDIR(cgi/lib/src/myFirstCgi.cpp)
AM_INIT_AUTOMAKE
INTI_REQUIRED_VERSION=1.0.7
AC_SUBST(INTI_CFLAGS)
AC_SUBST(INTI_LIBS)
AM_PROG_AR
AC_PROG_RANLIB
AC_PROG_CXX
AC_OUTPUT(Makefile \
		client/Makefile \
		client/src/Makefile \
		dsalgo/Makefile \
		dsalgo/src/Makefile \
		server/Makefile \
		server/src/Makefile)
